[metadata]
name = heurestic-reasoning-agent-jeblad
version = 0.0.0
description = Heuristic Reasoning Agent – A framework for creating agents from models, and running and managing the agents.
long_description = file: README.md
long_description_content_type = text/markdown
author = John Erling Blad
author_email = jeblad@gmail.com
maintainer = John Erling Blad
maintainer_email = jeblad@gmail.com
url = https://jeblad.gmail.io/heurestic-reasoning-agent
download_url = https://github.com/jeblad/heurestic-reasoning-agent.git
license = GNU Affero General Public License v3.0 only
license_files = file: LICENSE.md
project_urls =
    Issues = 'https://github.com/jeblad/heurestic-reasoning-agent/issues'
classifiers =
    Development Status :: 1 - Planning
    Environment :: GPU :: NVIDIA CUDA
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU Affero General Public License v3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research

keywords = artificialintelligence,ai,artificialneuralnet

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
